--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.10-slim-buster
 
 WORKDIR /backend-flask
 
+RUN apt-get update && apt-get install -y curl && apt-get clean
+
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
