--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,6 +9,12 @@ services:
       - "4567:4567"
     volumes:
       - ./backend-flask:/backend-flask
+    healthcheck:
+      test: curl --fail http://localhost:4567 || exit 1
+      interval: 60s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "http://localhost:4567"
