--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,10 @@ services:
     environment:
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
-    image: nidhogg65/cruddur-backend-flask:1.1
+      OTEL_SERVICE_NAME: "backend-flask"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "https://api.honeycomb.io/"
+      OTEL_EXPORTER_OTLP_HEADERS: "x-honeycomb-team=${HONEYCOMB_API_KEY}"
+    image: nidhogg65/cruddur-backend-flask:1.2
     ports:
       - "4567:4567"
     volumes:
@@ -12,7 +15,11 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "http://localhost:4567"
-    image: nidhogg65/cruddur-frontend-react-js:1.0
+      REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_Y9sPCeIKF"
+      REACT_APP_CLIENT_ID: "5flu8ag518uouja4a57mj2l56m"
+    image: nidhogg65/cruddur-frontend-react-js:1.1
     ports:
       - "3000:3000"
     volumes:
