--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
       AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
+      AWS_COGNITO_USER_POOL_ID: "us-east-1_lcrVOg7yt"
+      AWS_COGNITO_USER_POOL_CLIENT_ID: "5dd56kdhnhg4e24d8nnlaev94f"
     image: nidhogg65/cruddur-backend-flask:1.2
     ports:
       - "4567:4567"
